# crosspoint-reader

./: README.md
docs/: web-emulator-feasibility.md
emulator/: CMakeLists.txt  README.md  build.sh  main_emulator.cpp
emulator/hal/: HalDisplay_Web.cpp  HalGPIO_Web.cpp  HalStorage_Web.cpp
emulator/shell/: index.html  shell.js  style.css
emulator/shims/arduino/: Arduino.h  HardwareSerial.h  IPAddress.h  Print.h  SPI.h  Stream.h  WString.h  arduino_shim.cpp  pgmspace.h
emulator/shims/esp/: esp_http_client.h  esp_https_ota.h  esp_sleep.h  esp_sntp.h  esp_task_wdt.h  esp_wifi.h
emulator/shims/esp/driver/: gpio.h
emulator/shims/freertos/: FreeRTOS.h  freertos_shim.cpp  semphr.h  task.h
emulator/shims/network/: DNSServer.h  ESPmDNS.h  HTTPClient.h  StreamString.h  WebServer.h  WebSocketsServer.h  WiFi.h  WiFiClient.h  WiFiClientSecure.h  WiFiUdp.h  network_heavy_stubs.cpp  network_stubs.cpp
emulator/shims/network/html/: FilesPageHtml.generated.h  HomePageHtml.generated.h  SettingsPageHtml.generated.h
emulator/shims/sdk/: BatteryMonitor.h  EInkDisplay.h  InputManager.h  SDCardManager.h
lib/Epub/Epub/: Page.cpp
lib/Epub/Epub/parsers/: ChapterHtmlSlimParser.cpp
lib/GfxRenderer/: GfxRenderer.h
simulator/: CLAUDE.md  CMakeLists.txt  README.md  build.sh  main_simulator.cpp
simulator/hal/: HalDisplay_Web.cpp  HalGPIO_Web.cpp  HalStorage_Web.cpp
simulator/shell/: index.html  shell.js  style.css
simulator/shims/arduino/: Arduino.h  HardwareSerial.h  IPAddress.h  Logging.h  Print.h  SPI.h  Stream.h  WString.h  arduino_shim.cpp
simulator/shims/esp/: esp_http_client.h  esp_https_ota.h  esp_sleep.h  esp_sntp.h  esp_task_wdt.h  esp_wifi.h
simulator/shims/esp/driver/: gpio.h
simulator/shims/freertos/: FreeRTOS.h  freertos_shim.cpp  semphr.h  task.h
simulator/shims/network/: DNSServer.h  ESPmDNS.h  HTTPClient.h  StreamString.h  WebServer.h  WebSocketsServer.h  WiFi.h  WiFiClient.h  WiFiClientSecure.h  WiFiUdp.h  network_heavy_stubs.cpp  network_stubs.cpp
simulator/shims/network/html/: FilesPageHtml.generated.h  HomePageHtml.generated.h  SettingsPageHtml.generated.h
simulator/shims/sdk/: BatteryMonitor.h  EInkDisplay.h  InputManager.h  SDCardManager.h
src/activities/reader/: EpubReaderActivity.cpp
